2018-12-01  Gavin Smith  <gavinsmith0123@gmail.com>

	* NEWS: Development now uses git.

2018-10-29  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Parser.pm (_parse_texi) <inline conditionals>:
	Avoid an infinite loop when skipping an unexpanded conditional
	in case we run out of input.
	* tp/t/55conditionals.t (inlineifset_false_not_closed): New test.

2018-10-29  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Parser.pm (_parse_texi) <@inlinefmtifelse>:
	Avoid an infinite loop if there is no more input.
	* tp/t/55conditionals.t
	(inlineiffmtifelse_not_closed, inlineiffmtifelse_not_closed_two_arg)
	(inlineiffmtifelse_not_closed_three_arg): New tests.

2018-10-28  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Parser.pm (_check_line_directive): Fix code for
	checking if input is coming from a file.

2018-10-27  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Parser.pm (_next_text, _new_line): Do not pass
	$current as an argument, as it is not used any more now the
	check for the #line directive has been moved out.

2018-10-27  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/t/80include.t (cpp_lines): Add test of macro where a
	line that looks like a #line directive is not the very first
	line, as these may be treated differently by Parser.pm.

2018-10-27  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Parser.pm (_check_line_directive, _save_line_directive)
	(_next_text): Split out sub from _next_text.
	(_parse_texi) <BEGIN LINE>: Call _check_line_directive and
	_save_line_directive.  The condition for #line being meaningful 
	is the same as what was in _next_text.  

2018-10-27  Gavin Smith  <gavinsmith0123@gmail.com>

	* doc/texinfo.texi (#line directive) <CPP_LINE_DIRECTIVES>:
	Add a missing ).

2018-10-27  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Common.pm (@obsolete_variables): Remove.
	(obsolete_option): Remove.
	(%customization_variable_classes): Remove 'obsolete_variables'.